# VocaStar

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  README.md  docker-compose.yml  faq.md  pyproject.toml
.github/workflows/: pytest.yaml
app/: main.py
app/api/: __init__.py  auth.py  career.py  community.py  community_groups.py  community_mentors.py  community_partners.py  cosplay.py  home.py  notifications.py  profile_center.py  quiz.py  user.py
app/core/: config.py  logger.py  redis.py  sql.py
app/models/: __init__.py  career.py  community.py  cosplay.py  extensions.py  mentors.py  partners.py  profile.py  quiz.py  user.py
app/repositories/: career.py  community.py  cosplay.py  mentors.py  notifications.py  partners.py  posts.py  profile_center.py  quiz.py  user.py
app/schemas/: auth.py  career.py  community.py  community_posts.py  cosplay.py  home.py  jwxt.py  mentors.py  notifications.py  partners.py  profile_center.py  quiz.py  user.py
app/services/: achievement_service.py  auth_service.py  career_service.py  community_service.py  cosplay_service.py  holland_report_generator.py  home_service.py  json_repair.py  llm_service.py  mentor_service.py  notification_service.py  partner_service.py  post_service.py  profile_center_service.py  quiz_constants.py  quiz_service.py  report_queue.py
assets/: careers.yaml  cosplay.yaml  groups.yaml  mentors.yaml  nicknames.txt  partners.yaml  quizzes.yaml
docs/: faq.md  technical_overview.md
migrate/: add_achievements.py  add_career_cover.py  add_career_structured_fields.py  add_community_posts.py  add_community_tables.py  add_cosplay_wrongbook.py  add_notifications.py  add_state_payload.py  add_user_bio.py
scripts/: import_careers_from_yaml.py  import_cosplay_from_yaml.py  import_groups_from_yaml.py  import_mentors_from_yaml.py  import_partners_from_yaml.py  import_quiz_from_yaml.py  migrate_add_career_cover.py  migrate_add_cosplay_script_id_to_career.py  migrate_add_state_payload.py  seed_achievements_minimal.py  seed_community_demo.py  seed_fake_members.py
tests/: conftest.py  test_achievements.py  test_auth.py  test_auth_dependencies.py  test_career.py  test_career_repository_extras.py  test_community_groups.py  test_community_uploads.py  test_cosplay.py  test_home.py  test_json_repair.py  test_llm_service.py  test_mentors_partners.py  test_notifications.py  test_quiz.py  test_quiz_repository_extras.py  test_quiz_service_scoring.py  test_report_notification.py  test_user.py  test_wrongbook.py
