[project]
name = "FinancialCareerCommunity"
version = "0.1.0"
description = "A web application for managing a financial career community."
authors = [
    { name = "Muika(@Moemu)", email = "i@snowy.moe" }
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiosqlite>=0.21.0",
    "colorlog>=6.9.0",
    "fastapi>=0.116.2",
    "passlib>=1.7.4",
    "pre-commit>=4.3.0",
    "pydantic>=2.11.9",
    "pydantic-settings>=2.10.1",
    "pyjwt>=2.10.1",
    "python-dotenv>=1.1.1",
    "python-multipart>=0.0.20",
    "redis>=6.4.0",
    "setuptools>=80.9.0",
    "sqlalchemy>=2.0.43",
    "uvicorn>=0.35.0",
]

[tool.black]
line-length = 120

[tool.isort]
profile = "black"
